# Auth_sprint_2

./: README.md
content/: .gitignore  Dockerfile  Dockerfile_debuger  Dockerfile_etl  Dockerfile_tests  Makefile  commit.md  pyproject.toml  Для Проверяющего.md
content/docker_compose/: app.yaml  tests_app.yaml
content/docker_compose/nginx/configs/: api.conf
content/etl/: index.json  index_genres.json  main.py  requirements.txt
content/etl/config/: logging_config.py
content/etl/etl_process/: backoff.py  es_loader.py  extract_data.py  models.py  settings.py  transform_data.py
content/etl/state/: base_storage.py  json_file_storage.py  state.py
content/fastapi_solution/: .env.example  main.py
content/fastapi_solution/src/api/: deps.py
content/fastapi_solution/src/api/v1/: films.py  genres.py  persons.py
content/fastapi_solution/src/api/v2/: film.py  genre.py  person.py
content/fastapi_solution/src/clients/auth/: client.py  schemas.py
content/fastapi_solution/src/clients/base/: client.py  constants.py
content/fastapi_solution/src/core/: config.py  logger.py
content/fastapi_solution/src/models/: models.py
content/fastapi_solution/src/repository/: base.py  elasticsearch.py  redis.py
content/fastapi_solution/src/service/: base.py  film.py  genre.py  person.py
content/fastapi_solution/src/services/: film_service.py  genre_service.py  person_service.py
content/tests/functional/: .env.example  conftest.py  requirements.txt  settings.py
content/tests/functional/src/: test_endpoint_search.py  test_films.py  test_genres.py  test_persons.py
(+61 files in other folders)
